--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
   prestoapp:
     container_name: prestoapp
     build: ./presto_service
+    restart: unless-stopped
     ports:
       - "8080:8080"
     links:
