added files for http connector

--- a/presto_service/Dockerfile
+++ b/presto_service/Dockerfile
@@ -4,10 +4,20 @@ RUN yum -y install java-1.8.0-openjdk
 RUN mkdir /data
 RUN mkdir -p /srv/presto/etc/catalog
 WORKDIR /srv/presto
-RUN curl -O https://repo1.maven.org/maven2/com/facebook/presto/presto-server/0.218/presto-server-0.218.tar.gz
-RUN tar xvfz presto-server-0.218.tar.gz
-WORKDIR /srv/presto/presto-server-0.218
-COPY etc/* /srv/presto/presto-server-0.218/etc/
-COPY etc/catalog/* /srv/presto/presto-server-0.218/etc/catalog/
+# RUN curl -O https://repo1.maven.org/maven2/com/facebook/presto/presto-server/0.218/presto-server-0.218.tar.gz
+RUN curl -O https://repo1.maven.org/maven2/com/facebook/presto/presto-server/0.229/presto-server-0.229.tar.gz
+RUN tar xvfz presto-server-0.229.tar.gz
+
+# RUN rm /srv/presto/presto-server-0.218/plugin/example-http/*
+# COPY rest-plugin/*.jar /srv/presto/presto-server-0.218/plugin/example-http/
+
+# RUN rm -r /srv/presto/presto-server-0.218/plugin/example-http
+
+RUN mkdir /srv/presto/presto-server-0.229/plugin/rest-http/
+COPY rest-plugin/*.jar /srv/presto/presto-server-0.229/plugin/rest-http/
+
+WORKDIR /srv/presto/presto-server-0.229
+COPY etc/* /srv/presto/presto-server-0.229/etc/
+COPY etc/catalog/* /srv/presto/presto-server-0.229/etc/catalog/
 EXPOSE 8080
-CMD /srv/presto/presto-server-0.218/bin/launcher run
+CMD /srv/presto/presto-server-0.229/bin/launcher run
