--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   mongo:
     container_name: local_mongo
     image: mongo
+    restart: unless-stopped
     volumes:
       - ./data/mongodb:/data/db
     ports:
@@ -11,6 +12,7 @@ services:
   mysql:
     container_name: local_mysql
     image: mysql/mysql-server:latest
+    restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=rootpass
       - MYSQL_ROOT_HOST=%
@@ -36,18 +38,43 @@ services:
       - mongo
       - mysql
 
+  api:
+    container_name: api
+    build: ./rest_service
+    restart: always
+    ports:
+      - "8000:8000"
+
   prestoapp:
     container_name: prestoapp
     build: ./presto_service
-    restart: unless-stopped
+    restart: always
     ports:
       - "8080:8080"
     links:
       - mongo
       - mysql
+      - api
     depends_on:
       - mongo
       - mysql
+      - api
+
+  # worker:
+  #   container_name: worker
+  #   build: ./worker
+  #   restart: unless-stopped
+
+  # connector:
+  #   container_name: connector
+  #   build: ./connector
+  #   restart: always
+  #   ports:
+  #     - "5000:5000"
+  #   links:
+  #     - api
+  #   depends_on:
+  #     - api
 
   admin-mongo:
     image: 0x59/admin-mongo:latest
